--- a/INDEX.html
+++ b/INDEX.html
@@ -13,21 +13,21 @@
 
     <title>Annisa Mauliani Portofolio</title>
   </head>
-  <body>
+  <body id="home">
     <!-- Navbar -->
         <nav class="navbar justify-content-end navbar-expand-lg navbar-light bg-light">
          <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="#home">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Me</a>
+            <a class="nav-link" href="#about">Tentang Saya</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
+            <a class="nav-link" href="#edu">Pendidikan</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Work Experience</a>
+            <a class="nav-link" href="#edu">Pengalaman Bekerja</a>
           </li>
         </ul>
         </nav>
@@ -49,10 +49,11 @@
            <div class="container">
                <div class="row">
                    <div class="col-sm-12">
-                       <h2 class="text-center">Tentang Saya</h2>
+                       <br><h2 class="text-center">Tentang Saya</h2>
                         <hr style="width:85px; margin: auto;" />
                    </div>
                </div>
+
 
                <div class="row">
                    <div class="col-12">
@@ -60,28 +61,61 @@
                    </div>
                </div>
            </div>
+           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#273036" fill-opacity="0.3" d="M0,224L1440,288L1440,320L0,320Z"></path></svg>
        </section>
     <!-- akhir about   -->
 
     <!-- Education -->
-    <section class="about" id="about">
+    <section class="about" id="edu">
            <div class="container">
                <div class="row">
                    <div class="col-sm-3">
-                       <h2 class="text-center">Pendidikan</h2>
-                        <hr style="width:85px; margin: auto;"/>
-                       <h6>S1 Teknik Informatika - Universitas Muhammadiyah Surakarta</h6>
-                       <h6>S2 Ilmu Komputer - Universitas Gadjah Mada</h6>
+                       <br><h2 class="text-center fs-2">Pendidikan</h2>
+                       <div class="p-2 border"><h6>S1 Teknik Informatika - Universitas Muhammadiyah Surakarta</h6>
+                       <h6>S2 Ilmu Komputer - Universitas Gadjah Mada</h6></div>
+
+
                    </div>
 
                    <div class="col-sm-9">
-                       <h2 class="text-center">Pengalaman Bekerja</h2>
-                        <hr style="width:85px; margin: auto;"/>
+                       <br><h2 class="text-center">Pengalaman Bekerja</h2>
+
+                       <div class="d-grid gap-3">
+                      <div class="p-2 border" text-center>
+                          <h5 style="font-size:15px;">24 Agustus 2020 - present</h5>
+                          • Ketua Program Studi Sistem Informasi dan Teknik Informatika - Institut Bisnis dan Informatika Kwik Kian Gie
+                          <br>  Mengatur dan memastikan bahwa kualitas pembelajaran, proses pembelajaran, hubungan kerjasama dengan perusahaan rekanan, berjalan dengan baik dan lancar</div>
+
+
+                      <div class="p-2 border">
+                          <h5 style="font-size:15px;">25 September 2015 - present</h5>
+                          • IT Bisnis Analis - PT. Matahati Consuting
+                          <br text-center>Sebagai seorang IT Bisnis Analis, saya berada di garda depan dari perusahaan untuk bertemu klient/user. Tugas utama adalah menjembatani komunikasi antar programmer dengan klient. Yaitu menganalisis kebutuhan user yang akan diimplementasikan ke dalam sebuah aplikasi dan berkomunikasi dengan programmer dalam proses implementasinya.
+                      </div>
+
+                      <div class="p-2 bg-light border">
+                          <h5 style="font-size:15px;"> 28 februari 2019- 28 agustus 2019 </h5>
+                          • SAP Consultant PP Module Trainee
+                          <br>Saya memiliki tugas belajar keseluruhan materi SAP Modul PP. Selama masa belajar, saya memiliki kesempatan untuk ikut dalam proyek implementasi SAP di salah satu perusahaan tekstil di Bandung. Pada saat diproject saya berlatih memahami proses Business Anayst perusahaan dari Bundle dan Blueprint, saya juga ditugaskan untuk testing, ikutserta dalam proses UAT dan membuat dokumen UAT.
+                      </div>
+
+                      </div>
                    </div>
                </div>
                </div>
+    </section>
     <!-- Akhir Education -->
 
+    <!-- Footer -->
+            <footer class="bg-light text-center text-white">
+              <!-- Copyright -->
+              <div class="text-center" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2021 Copyright:
+                <a class="text-white" href="https://www.instagram.com/annisamauliani/">by Annisa Mauliani</a>
+              </div>
+              <!-- Copyright -->
+            </footer>
+    <!-- Footer -->
 
     <!-- Optional JavaScript; choose one of the two! -->
 
